--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,8 @@
 server:
-  port:
-    8082
+  port: 8082
 spring:
   application:
-    name: customer-service
+    name: CUSTOMER-SERVICE
   h2:
     console:
       enabled: true
