--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,10 @@ spring:
     console:
       enabled: true
   datasource:
-    url: jdbc:h2:mem:customer-db
+    url: jdbc:h2:mem:Belling-db
   cloud:
     discovery:
-      enabled: false  #disable discovery service
+      enabled: true
+Eureka:
+  instance:
+    preferIpAddress: true
