feat:adding other crud methods del

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,4 +13,7 @@ spring:
       enabled: true
 Eureka:
   instance:
-    preferIpAddress: true
+    prefer-ip-address: true # does not work with localhost
+
+
+
